--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 	display:inline-block;
 	margin-left:5%;
 }
+
+    div#myDiv{
+        /*background-color:yellow,*/
+    }
+
   </style>
  </head>
  <body>
@@ -63,6 +68,7 @@
             <li>Winter: <b>#005393</b></li>
         </ul>
     </p>
+    <div>I'm inside a div with an id of myDiv</div>
     <p>
     Aesthetic gentrify YOLO McSweeney's typewriter single-origin coffee. Slow-carb hella listicle lomo, Helvetica single-origin coffee butcher stumptown. Chambray try-hard church-key mumblecore, tote bag PBR cardigan. Retro Austin Brooklyn, blog Intelligentsia gentrify jean shorts sartorial bicycle rights gastropub. Aesthetic wayfarers Pitchfork, tattooed Carles quinoa meh leggings distillery pork belly banjo. Umami cred lumbersexual skateboard, pork belly Tumblr vegan letterpress. Fixie bicycle rights butcher chillwave, gluten-free health goth Echo Park locavore whatever.
     <img src="images/300x400.png" alt="Season Wear Goes Here" id="wear" />
@@ -78,12 +84,24 @@
     </p>
     <footer>
     <p><small>&copy; 2021 by 
-        YOUR NAME HERE, All Rights Reserved ~ 
+        Priscila Garcia-Mendoza, All Rights Reserved ~ 
         <a id="html-checker" href="#">Check HTML</a> ~ 
         <a id="css-checker" href="#">Check CSS</a></small>
     </p>
     </footer>
   </main>
   <script src="js/main.js"></script>
+  <script>
+    document.querySelector("div#myDiv").innerHTML = "Hi from JS!";
+    $("document").ready(function(){
+
+        let theDiv =  $("div#myDiv");
+
+        $("div#myDiv")
+        .css("background-color","blue")
+        .append("Hi from jQuery!");
+        .fadeOut(3000);
+    });
+  </script>
   </body>
 </html>
