--- a/index.html
+++ b/index.html
@@ -32,14 +32,19 @@
     }
 
     ul.colors{
-	display:inline-block;
-	margin-left:5%;
-}
-
-    div#myDiv{
-        /*background-color:yellow,*/
+        display:inline-block;
+        margin-left:5%;
     }
 
+    div#myDiv > p{
+        background-color: yellow;
+    }
+
+    div#yetAnotherDiv li:nth-child(even){
+        background-color:yellow;
+}
+
+        
   </style>
  </head>
  <body>
@@ -58,7 +63,7 @@
 	</header>
      
    <main class="wrapper">
-    <header><h3>Outfitter for All Seasons!</h3></header>
+    <header><h3 id="slogan">Outfitter for All Seasons!</h3></header>
     <p>
     The colors of the seasonal images are as follows:
         <ul class="colors">
@@ -68,7 +73,6 @@
             <li>Winter: <b>#005393</b></li>
         </ul>
     </p>
-    <div>I'm inside a div with an id of myDiv</div>
     <p>
     Aesthetic gentrify YOLO McSweeney's typewriter single-origin coffee. Slow-carb hella listicle lomo, Helvetica single-origin coffee butcher stumptown. Chambray try-hard church-key mumblecore, tote bag PBR cardigan. Retro Austin Brooklyn, blog Intelligentsia gentrify jean shorts sartorial bicycle rights gastropub. Aesthetic wayfarers Pitchfork, tattooed Carles quinoa meh leggings distillery pork belly banjo. Umami cred lumbersexual skateboard, pork belly Tumblr vegan letterpress. Fixie bicycle rights butcher chillwave, gluten-free health goth Echo Park locavore whatever.
     <img src="images/300x400.png" alt="Season Wear Goes Here" id="wear" />
@@ -83,25 +87,15 @@
     Text provided by <a href="http://hipsum.co/" target="_blank">Hipster Ipsum</a>
     </p>
     <footer>
-    <p><small>&copy; 2021 by 
+    <p><small>&copy; 2021 - 2023 by 
         Priscila Garcia-Mendoza, All Rights Reserved ~ 
         <a id="html-checker" href="#">Check HTML</a> ~ 
         <a id="css-checker" href="#">Check CSS</a></small>
     </p>
     </footer>
   </main>
-  <script src="js/main.js"></script>
-  <script>
-    document.querySelector("div#myDiv").innerHTML = "Hi from JS!";
-    $("document").ready(function(){
-
-        let theDiv =  $("div#myDiv");
-
-        $("div#myDiv")
-        .css("background-color","blue")
-        .append("Hi from jQuery!");
-        .fadeOut(3000);
-    });
-  </script>
+  <script src="js/main.js"></script> 
+  <script src="js/season.styles.js"></script> 
   </body>
 </html>
+
