--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
  <body>
 	<header role="banner">
 	    <img src="images/four-seasons.gif" alt="Seasonal Logo Goes Here" class="flexible" id="logo" />
+        <h4><em>The "Seasonal Styles" webpage is a dynamic and visually appealing single-page website for Eddie Browser, a seasonal wear outfitter. Using jQuery, the page automatically changes its content, colors, logo, and featured clothing item based on the current season. The webpage offers a unique look and feel for each of the four seasons, ensuring a captivating user experience.</em></h4>
 		<h1 class="masthead">Eddie Browser</h1>
 		<nav>
 			<ul>
@@ -98,4 +99,3 @@
   <script src="js/season.styles.js"></script> 
   </body>
 </html>
-
