--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 
     #logo{
-        float:right;
+        /*float:right; */
         display:inline-block;
         padding:2px;
         max-width:100px; /* actual size of image */
@@ -24,7 +24,7 @@
     }
   
     #wear {
-        float:left;
+        /*float:left; */
         display:inline-block;
         padding:20px;
         max-width:300px; /* actual size of image */
