--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 
     #logo{
-        /*float:right; */
+        float:right;
         display:inline-block;
         padding:2px;
         max-width:100px; /* actual size of image */
@@ -24,7 +24,7 @@
     }
   
     #wear {
-        /*float:left; */
+        float:left;
         display:inline-block;
         padding:20px;
         max-width:300px; /* actual size of image */
@@ -37,14 +37,13 @@
     }
 
     div#myDiv > p{
-        background-color: yellow;
+       background-color:yellow; 
     }
 
     div#yetAnotherDiv li:nth-child(even){
         background-color:yellow;
-}
+    }
 
-        
   </style>
  </head>
  <body>
@@ -75,27 +74,20 @@
         </ul>
     </p>
     <p>
-    Aesthetic gentrify YOLO McSweeney's typewriter single-origin coffee. Slow-carb hella listicle lomo, Helvetica single-origin coffee butcher stumptown. Chambray try-hard church-key mumblecore, tote bag PBR cardigan. Retro Austin Brooklyn, blog Intelligentsia gentrify jean shorts sartorial bicycle rights gastropub. Aesthetic wayfarers Pitchfork, tattooed Carles quinoa meh leggings distillery pork belly banjo. Umami cred lumbersexual skateboard, pork belly Tumblr vegan letterpress. Fixie bicycle rights butcher chillwave, gluten-free health goth Echo Park locavore whatever.
+        A seasonal clothing website that dynamically updates its styling and content when different seasons are clicked.
     <img src="images/300x400.png" alt="Season Wear Goes Here" id="wear" />
-    </p>
-    <p>
-    Gluten-free selfies normcore chillwave. Listicle 90's chambray, seitan cold-pressed try-hard Etsy authentic flexitarian vinyl. Meditation bespoke freegan, single-origin coffee cred seitan 90's gentrify brunch Williamsburg squid cold-pressed. Brooklyn readymade Tumblr wayfarers ethical. Biodiesel VHS Godard High Life, tousled Banksy craft beer. Mlkshk direct trade locavore, mumblecore keytar artisan hashtag fap. Cred cronut Brooklyn, locavore art party small batch PBR semiotics ennui kitsch taxidermy mlkshk stumptown.
-    </p>
-    <p>
-    Polaroid iPhone plaid, Pitchfork Shoreditch paleo. Hashtag keytar chia scenester Pinterest, semiotics tousled food truck. YOLO scenester deep v, taxidermy paleo quinoa McSweeney's Carles VHS mustache Williamsburg gluten-free readymade cold-pressed. Truffaut Thundercats Schlitz, listicle organic Brooklyn paleo squid asymmetrical readymade migas gluten-free Austin. Etsy Wes Anderson 8-bit retro, polaroid synth paleo banh mi before they sold out Vice. Bushwick fap Intelligentsia, whatever Etsy High Life Kickstarter migas retro Banksy YOLO Carles yr raw denim. Gluten-free fixie taxidermy pop-up, actually Kickstarter flannel put a bird on it master cleanse.
-    </p>
-    <p>
-    Text provided by <a href="http://hipsum.co/" target="_blank">Hipster Ipsum</a>
+
     </p>
     <footer>
-    <p><small>&copy; 2021 - 2023 by 
+    <p><small>&copy; 2023 by 
         Priscila Garcia-Mendoza, All Rights Reserved ~ 
         <a id="html-checker" href="#">Check HTML</a> ~ 
         <a id="css-checker" href="#">Check CSS</a></small>
     </p>
     </footer>
   </main>
-  <script src="js/main.js"></script> 
-  <script src="js/season.styles.js"></script> 
+  <script src="js/main.js"></script>
+  <script src="js/seasonal-styles.js"></script>
+
   </body>
 </html>
